[package]
name = "microledger"
description = "Microledger is an authentic data provider leveraging the concept of data provenance log. Provenance logs are intended to be a generalized form of a linked list data structure that uses cryptographic primitives to ensure integrity with a strong cryptographic link to a controller of the log."
license = "EUPL-1.2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.68"
serde = {version="1.0", features = ["derive"]}
said = "0.1.2"
keri = "0.8.0"
thiserror = "1.0.29"
typetag = "0.1"

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand = { version = "0.7.3", features = ["std", "getrandom"]}