[package]
name = "microledger"
description = "Microledger is an authentic data provider leveraging the concept of data provenance log. Provenance logs are intended to be a generalized form of a linked list data structure that uses cryptographic primitives to ensure integrity with a strong cryptographic link to a controller of the log."
license = "EUPL-1.2"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
#[features]
keri = ["keri"]

[dependencies]
serde_json = "1"
serde = {version="1", features = ["derive"]}
thiserror = "1.0.29"
clap = "3.0.0-beta.4"
sai = {git = "https://github.com/THCLab/cesrox"}
cesrox = {git = "https://github.com/THCLab/cesrox"}
keri = {git = "https://github.com/THCLab/keriox", branch = "partial_rot", optional = true}

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand = { version = "0.7.3", features = ["std", "getrandom"]}
tempfile = { version = "3.1" }

