[package]
name = "microledger"
description = "Microledger is an authentic data provider leveraging the concept of data provenance log. Provenance logs are intended to be a generalized form of a linked list data structure that uses cryptographic primitives to ensure integrity with a strong cryptographic link to a controller of the log."
license = "EUPL-1.2"
version = "0.1.1"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
keriox = ["keri", "cesrox"]

[dependencies]
serde_json = "1"
serde = {version="1", features = ["derive"]}
thiserror = "1.0.29"
clap = "3.0.0-beta.4"
said = {git = "https://github.com/THCLab/cesrox",  tag = "v0.1.4"}
cesrox = {git = "https://github.com/THCLab/cesrox",  tag = "v0.1.4", optional = true}
keri = {git = "https://github.com/THCLab/keriox", optional = true}

[dev-dependencies]
ed25519-dalek = "1.0.1"
rand = { version = "0.7.3", features = ["std", "getrandom"]}
tempfile = { version = "3.1" }
base64 = "0.21.0"

