[package]
name = "bindings"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
napi = { version = "1", features = ["serde-json"]}
napi-derive = "1"
microledger = {path = ".."}
serde_json = "1.0.68"
serde = {version="1.0", features = ["derive"]}
said = "0.1.2"
keri = "0.8.0"

[lib]
crate-type = ["cdylib"]

[build-dependencies]
napi-build = "1"